--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     ]
   },
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "express": "^4.16.4",
+    "react-bootstrap": "^1.0.0-beta.8",
     "superagent": "^5.0.2"
   },
   "devDependencies": {
