--- a/package.json
+++ b/package.json
@@ -31,7 +31,10 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "express": "^4.16.4",
+    "knex": "^0.16.5",
     "react-bootstrap": "^1.0.0-beta.8",
+    "react-router-dom": "^5.0.0",
+    "sqlite3": "^4.0.6",
     "superagent": "^5.0.2"
   },
   "devDependencies": {
