--- a/package.json
+++ b/package.json
@@ -30,12 +30,21 @@
   },
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "css-loader": "^2.1.1",
     "express": "^4.16.4",
+    "file-loader": "^3.0.1",
+    "install": "^0.12.2",
     "knex": "^0.16.5",
+    "npm": "^6.9.0",
     "react-bootstrap": "^1.0.0-beta.8",
+    "react-responsive-carousel": "^3.1.49",
     "react-router-dom": "^5.0.0",
+    "react-slick": "^0.24.0",
+    "slick-carousel": "^1.8.1",
     "sqlite3": "^4.0.6",
-    "superagent": "^5.0.2"
+    "style-loader": "^0.23.1",
+    "superagent": "^5.0.2",
+    "svg-url-loader": "^2.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.4.3",
